Challenge request tests