@@ -148,7 +148,7 @@ public class Document {
                         ParameterizedType parameterizedType = (ParameterizedType) field.getGenericType();
                         Class<?> elementType = (Class<?>) parameterizedType.getActualTypeArguments()[0];
 
-                        field.set(object, List.of(getObjectArrayFromDoc((String[]) property, elementType)));
+                        field.set(object, new ArrayList<>(Arrays.asList(getObjectArrayFromDoc((String[]) property, elementType))));
                     }
                     else if (fieldType.isEnum())
                     {
